--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ flask_bcrypt = "^0.7.1"
 pyjwt = "^1.7.1"
 python-dotenv = "^0.14.0"
 flask_restx = "^0.2.0"
+flask-migrate = "^2.5.3"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
