--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -16,4 +16,5 @@ COPY . /app
 ENV PYTHONPATH="${PYTHONPATH}:/app/cli_api"
 
 RUN chmod +x ./bin/entrypoint.sh
+RUN chmod +x ./bin/migrate.sh
 ENTRYPOINT [ "./bin/entrypoint.sh" ]
