--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ python-dotenv = "^0.14.0"
 flask_restx = "^0.2.0"
 flask-migrate = "^2.5.3"
 psycopg2-binary = "^2.8.6"
+docker = "^4.3.1"
+redis = "^3.5.3"
+rq = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
