--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ psycopg2-binary = "^2.8.6"
 docker = "^4.3.1"
 redis = "^3.5.3"
 rq = "^1.5.2"
+flask-redis = "^0.4.0"
+Flask-RQ2 = "^18.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
