Update env sample with redis db config

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,8 @@ FLASK_APP=app.py
 ENVIRONMENT=dev
 BCRYPT_LOG_ROUNDS=12
 SECRET_KEY=MY_SECRET_KEY
+
+# Redis settings
+REDIS_DB=0
+REDIS_PORT=6379
+REDIS_HOST=redis
