Add codecov workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ rq = "^1.5.2"
 flask-redis = "^0.4.0"
 Flask-RQ2 = "^18.3"
 fakeredis = "^1.4.3"
+pytest-cov = "^2.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
